# qrcode

computepose/: CMakeLists.txt  package.xml
computepose/include/computepose/: libPoseQr.h
computepose/src/: computeQrpose_node.cpp  poseQr.cpp
stereo_cam_imu_driver/: CMakeLists.txt  CMakeLists.txt~
stereo_cam_imu_driver/include/: Float64Stamped.h
stereo_cam_imu_driver/src/: .cdatacapture.cpp.swp  cdatacapture.cpp~  cdatacapture.h  imgframe.h  stereo.cpp  stereo.cpp~  stereo_old.cpp
